# macroquad-toolkit

./: CODE_REVIEW_macroquad-toolkit_2026-06-06.md  Cargo.toml  MACROQUAD_TOOLKIT.md  README.md
scripts/: capture_ui.ps1
src/: achievements.rs  assets.rs  audio.rs  camera.rs  capture.rs  colors.rs  data_loader.rs  db.rs  debug.rs  entities.rs  events.rs  fx.rs  grid.rs  input.rs  lib.rs  math.rs  notifications.rs  pathfinding.rs  persistence.rs  raster.rs  rng.rs  settings.rs  sprite.rs  states.rs  timing.rs  ui.rs  wasm_storage.rs
src/fx/: crt.rs  fade.rs  floating_text.rs  particles.rs  shake.rs  travel.rs  typewriter.rs
src/grid/: flat_grid.rs  fog.rs  iso.rs  pathfinding.rs  tile_pos.rs  vec_grid.rs  vision.rs
src/persistence/: autosave.rs  files.rs  keys.rs  save_root.rs  slots.rs  version.rs
src/render3d/: billboard.rs  camera.rs  mod.rs
src/sprite/: variation.rs
src/ui/: font.rs  forms.rs  hover_tooltip.rs  layout.rs  plaque.rs  scroll_tabs.rs  surfaces.rs  widgets.rs
