[package]
name = "macroquad-toolkit"
version = "0.1.0"
edition = "2021"


[features]
default = []
db = ["dep:sqlx", "dep:async-std"]

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
sqlx = { version = "0.7", features = ["runtime-async-std-native-tls", "sqlite"], optional = true }
async-std = { version = "1.12", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"

